[package]
name = "salt"
version = "0.0.3"
description = "Salt is a fast, simple, and asynchronous micro web-framework for Rust."
authors = ["Ryan Leckey <leckey.ryan@gmail.com>"]
repository = "https://github.com/mehcode/salt"
license = "MIT/Apache-2.0"
documentation = "https://docs.rs/salt"
keywords = ["salt", "web", "framework", "async", "server"]
categories = ["network-programming", "web-programming::http-server"]

[dependencies]
futures = "0.1.14"
tokio-core = "0.1.9"
tokio-io = "0.1.2"
net2 = "0.2.31"
num_cpus = "1.6.2"
bytes = "0.4.5"
hyper = "0.11"
tokio-proto = "0.1.1"
regex = "0.2"

[dev-dependencies]
serde = "1.0"
serde_derive = "1.0"
serde_json = { git = "https://github.com/mehcode/json", branch = "async_reader", features = ["tokio"] }
error-chain = "0.11.0-rc.2"

[profile.release]
lto = true
