[package]
name = "shio"
version = "0.0.3"
description = "Shio is a fast, simple, and asynchronous micro web-framework for Rust."
authors = ["Ryan Leckey <leckey.ryan@gmail.com>"]
repository = "https://github.com/mehcode/shio"
license = "MIT/Apache-2.0"
documentation = "https://docs.rs/shio"
keywords = ["shio", "web", "framework", "async", "server"]
categories = ["asynchronous", "web-programming::http-server"]

[dependencies]
futures = "0.1.14"
tokio-core = "0.1.9"
tokio-io = "0.1.2"
net2 = "0.2.31"
num_cpus = "1.6.2"
bytes = "0.4.5"
hyper = "0.11"
tokio-proto = "0.1.1"
regex = "0.2"

[dev-dependencies]
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"
error-chain = "0.11.0-rc.2"

[profile.release]
lto = true
