[package]
name = "shio"
workspace = ".."
version = "0.3.0"
description = "Shio is a fast, simple, and asynchronous micro web-framework for Rust."
authors = ["Ryan Leckey <leckey.ryan@gmail.com>"]
repository = "https://github.com/mehcode/shio-rs"
license = "MIT/Apache-2.0"
documentation = "https://docs.rs/shio"
keywords = ["shio", "web", "framework", "async", "server"]
categories = ["asynchronous", "web-programming::http-server"]

[dependencies]
futures = "0.1.14"
tokio-core = "0.1.9"
net2 = "0.2.31"
num_cpus = "1.6.2"
hyper = "0.11"
tokio-proto = "0.1.1"
regex = "0.2"
log = "0.4"
unsafe-any = "0.4.2"
http = "0.1"

[features]
default = []
nightly = []
