[package]
name = "postgres"
version = "0.0.0"
workspace = "../.."

[dependencies]
shio = { path = "../../lib" }
tokio-postgres = { version = "0.2", features = ["with-uuid"] }
futures-state-stream = "0.1"
error-chain = "0.11.0-rc.2"
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"
uuid = { version = "0.5", features = ["serde"] }
pretty_env_logger = "0.1"
futures-await = { git = 'https://github.com/alexcrichton/futures-await' }
