[package]
name = "templates_askama"
version = "0.0.0"
workspace = "../.."

[dependencies]
shio = { path = "../../lib" }
askama = { git = "https://github.com/mehcode/askama", features = ["with-shio"] }

[build-dependencies]
askama = { git = "https://github.com/mehcode/askama", features = ["with-shio"] }

[replace]
"askama_derive:0.3.4" = { git = "https://github.com/mehcode/askama" }
"askama_shared:0.3.4" = { git = "https://github.com/mehcode/askama" }
